--- a/et4.tex
+++ b/et4.tex
@@ -1,4 +1,4 @@
-% Created 2023-06-07 Wed 11:25
+% Created 2023-06-07 Wed 11:33
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -24,7 +24,7 @@
 \newminted{common-lisp}{fontsize=\footnotesize} 
 \author{deepwaterooo}
 \date{\today}
-\title{ET 框架学习笔记（四）－－框架总结}
+\title{ET 框架学习笔记（四）－－框架总结【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！爱表哥，爱生活！！！】【活宝妹坐等亲爱的表哥，领娶活宝妹回家！爱表哥，爱生活！！！】}
 \hypersetup{
   pdfkeywords={},
   pdfsubject={},
